Changes after second lesson

--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
 		<h1><span class="banana">Banana</span> page</h1>
 	</header>
 
-	<div class = "navigation">
-		<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">TOP SECRET</a></li>
-		<li><a rel="noopener" target="_self" href="#Banany">Banany</a></li>
-		<li><a rel="noopener" target="_self" href="#Nie Banany">Nie Banany</a></li>
-		<li><a rel="noopener" target="_self" href="#Why Banany">Dlaczego Banany </a></li>
-		<li><a rel="noopener" target="_self" href="#Banany Wanted">Banany Wanted </a></li>
-	</div>
+	<nav>
+		<ul>
+			<li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">TOP SECRET</a></li>
+			<li><a rel="noopener" target="_self" href="#Banany">Banany</a></li>
+			<li><a rel="noopener" target="_self" href="#Nie Banany">Nie Banany</a></li>
+			<li><a rel="noopener" target="_self" href="#Why Banany">Dlaczego Banany </a></li>
+			<li><a rel="noopener" target="_self" href="#Banany Wanted">Banany Wanted </a></li>
+			<li><a rel="noopener" target="_self" href="#How to peel banana">Jak czyścić banany?(ol) </a></li>
+			<li><a rel="noopener" target="_self" href="#Drink with banana">Jakie są napoje do bananów?(ul) </a></li>
+			<li><a rel="noopener" target="_self" href="#lists ul">nieuporządkowane listy(ul2)</a></li>
+			<li><a rel="noopener" target="_self" href="#lists ol">uporządkowane listy(ol2)</a></li>
+			<li><a rel="noopener" target="_self" href="#nestedLists">Listy w listach(nested lists)</a></li>
+			<li><a rel="noopener" target="_self" href="#Kontynenty">Kontynenty</a></li>
+			<li><a rel="noopener" target="_self" href="#opisy">Opisy</a></li>
+		</ul>
+	</nav>
 	<main>
 		<article>
 			<a id = "Banany"></a>
@@ -120,6 +129,147 @@
 			</table>
 		</article>
 
+		<article>
+			<a id = "How to peel banana"></a>
+			<h2>Jak czyścić <strong class="banana">BANAN</strong>?</h2>
+			<ol>
+				<li><img src="Banany/Foodthought-banana2-558x270.jpg" ><br>Zaczynać trzeba od końca pokazanego na obrazku</li>
+				<br>
+				<li><img src="Banany/Bez nazwy.jpg"><br>Potem zacząć robić to co jest pokazano na obrazku ale <span class="NIE">NIE</span> do końca</li>
+				<br>
+				<li>Można zacząć jeść</li>
+			</ol>
+		</article>
+
+		<article>
+			<a id = "Drink with banana"></a>
+			<h2>co można pić do <strong class="banana">BANANA</strong>?</h2>
+			<ul>
+				<li>Herbata czarna</li>
+				<li>Herbata zielona</li>
+				<li>Herbata inna</li>
+			</ul>
+		</article>
+
+		<article>
+			<a id = "lists ul"></a>
+			<h2><span class="NIE">NIE</span>uporządkowane listy <span class="NIE">NIE</span> związane z <strong class="banana">BANANA</strong>mi</h2>
+			<ul style="list-style-type:circle">
+				<li>Pierogi bananowe</li>
+				<li>Barszcz bananowy</li>
+				<li>Naleśniki z bananami</li>
+			</ul>
+			<br>
+			<ul style="list-style-type:disc">
+				<li>Windows</li>
+				<li>Linux</li>
+				<li>Unix</li>
+			</ul>
+			<br>
+			<ul style="list-style-type:square">
+				<li>Senior Pomidor</li>
+				<li>Mr Banan</li>
+				<li>Baby yoda</li>
+			</ul>
+			<br>
+			<ul style="list-style-type:none">
+				<li><span class="NIE">NIE</span> numerowany element 1</li>
+				<li><span class="NIE">NIE</span> numerowany element 2</li>
+				<li><span class="NIE">NIE</span> numerowany element 3</li>
+			</ul>
+		</article>
+
+		<article>
+			<a id = "lists ol"></a>
+			<h2>uporządkowane listy nie związane z <strong class="banana">BANANA</strong>mi</h2>
+			<ol type="I">
+				<li>1</li>
+				<li>2</li>
+				<li>3</li>
+				<li>4</li>
+				<li>5</li>
+			</ol>
+			<br>
+			<ol type="l">
+				<li>I</li>
+				<li>II</li>
+				<li>III</li>
+				<li>IV</li>
+				<li>V</li>
+			</ol>
+			<br>
+			<ol type="A">
+				<li>a</li>
+				<li>b</li>
+				<li>c</li>
+				<li>d</li>
+				<li>e</li>
+			</ol>
+			<br>
+			<ol type="a">
+				<li>A</li>
+				<li>B</li>
+				<li>C</li>
+				<li>D</li>
+				<li>E</li>
+			</ol>
+			<br>
+			<ol type="i">
+				<li>nikt <span class="NIE">NIE</span> będzie korzystać z tego "type"</li>
+				<li><span class="NIE">NIE</span>ma w nim sensu</li>
+				<li>nikt <span class="NIE">NIE</span> pisze rzymskie cyfry małymi łacinskimi literami</li>
+				<li>może mieć sens tylko z inną czcionkę</li>
+			</ol>
+		</article>
+
+		<article>
+			<a id = "nestedLists"></a>
+			<h2>jak robić randomowe listy</h2>
+			<ol type="I">
+				<li>punkt 1: napisać nagłówek</li>
+				<li>punkt 2: są trzy warianty</li>
+				<ul>
+					<li>napisać ol list</li>
+					<li>napisać ul list</li>
+					<li>napisać listy w listach</li>
+				</ul>
+				<li>punkt 3: </li>
+				<li>punkt 4:</li>
+				<ol>
+					<li>punkt 4.1</li>
+					<li>punkt 4.2</li>
+					<li>punkt 4.3</li>
+				</ol>
+			</ol>
+		</article>
+		<article>
+			<a id = "Kontynenty"></a>
+			<h2>Kontynenty</h2>
+			<ol type="I">
+				<li>Europa</li>
+				<li>Azja</li>
+				<li>Afryka</li>
+				<li>Australia</li>
+			</ol>
+			<p>Australia i Oceania są jedną częścią świata, lecz kontynentem jest tylko Australia</p>
+			<ol type="I" start="5">
+				<li>Ameryka Południowa</li>
+				<li>Ameryka Północna</li>
+			</ol>
+		</article>
+
+		<article>
+			<a id = "opisy"></a>
+			<h2>opisy<strong class="banana">Bananów</strong></h2>
+			<dl>
+				<dt>blablabla</dt>
+				<dd>opis blablabla</dd>
+				<dt>pons</dt>
+				<dd>opis pons</dd>
+				<dt>banan</dt>
+				<dd>opis bananu</dd>
+			</dl>
+		</article>
 	</main>
 		<hr>
 	<footer>
